# scion-android

./: .gitignore  .gitmodules  README.md  USAGE.md  build.gradle  gradle.properties
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/org/scionlab/endhost/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/: USAGE.md  about.html  beacon_server.toml  border_router.toml  certificate_server.toml  control_server.toml  daemon.toml  dispatcher.conf  dispatcher.toml  how.html  path_server.toml  topology.json
app/src/main/cpp/: dispatcher-wrapper.c
app/src/main/java/com/example/myapplication/: BackgroundService.java  DispatcherService.java  MainActivity.java  PingpongService.java  SciondService.java
app/src/main/java/org/scionlab/endhost/: AboutActivity.java  BackgroundService.java  Component.java  ComponentRegistry.java  Config.java  DaemonThread.java  DispatcherService.java  DispatcherThread.java  HelpActivity.java  Logger.java  MainActivity.java  MainService.java  MarkdownActivity.java  PingpongService.java  ScionBinary.java  ScionComponent.java  ScionComponentRegistry.java  ScionConfig.java  ScionDaemon.java  ScionDispatcher.java  ScionLabService.java  ScionProcess.java  ScionScmp.java  ScionService.java  SciondService.java  ScmpService.java  SnetService.java  Storage.java  Utils.java  VPNPermissionFragment.java
app/src/main/java/org/scionlab/endhost/components/: BeaconServer.java  Daemon.java  Dispatcher.java  Scmp.java
app/src/main/java/org/scionlab/endhost/scion/: BeaconServer.java  Binary.java  BorderRouter.java  CertificateServer.java  Component.java  ComponentRegistry.java  Config.java  Daemon.java  Dispatcher.java  Logger.java  PathServer.java  Process.java  Scion.java  ScionLab.java  Scmp.java  Storage.java  VPNClient.java
app/src/main/java/org/scionlab/scion/: LogActivity.java  MainActivity.java  ScionControlFragment.java  ScionService.java  SensorFetcherFragment.java  UncaughtExceptionHandler.java  VPNPermissionFragment.java  WebActivity.java
app/src/main/java/org/scionlab/scion/as/: BeaconServer.java  BorderRouter.java  CertificateServer.java  Component.java  ComponentRegistry.java  Config.java  ControlServer.java  Daemon.java  Dispatcher.java  Logger.java  PathServer.java  Process.java  ScionAS.java  ScionLabAS.java  Scmp.java  SensorFetcher.java  Storage.java  VPNClient.java
app/src/main/res/drawable/: ic_scion_logo.xml
app/src/main/res/layout/: activity_help.xml  activity_log.xml  activity_main.xml  activity_markdown.xml  activity_web.xml  content_main.xml  fragment_main.xml  sensor_fetcher_fragment.xml
app/src/main/res/menu/: activity_main.xml  activity_main_drawer.xml  menu_main.xml
app/src/main/res/mipmap/: ic_launcher.xml
app/src/main/res/values/: colors.xml  strings.xml  styles.xml
app/src/test/java/org/scionlab/endhost/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
